[package]
name = "boehm-rs"
version = "0.1.2"
authors = ["playx"]
edition = "2018"
repository = "https://github.com/playXE/boehm-rs"
readme = "README.md"
keywords = ["gc","boehm","memory"]
license = "MIT"
description = "Rust interface to BoehmGC"


[dependencies]
libc = "0.2"
[build-dependencies]
bindgen = "0.47.1"

